Closed
Bug 546797
Opened 13 years ago
Closed 13 years ago
[OOPP] Assertion in RPCChannel's EnqueuePendingMessages: ABORT: expected mDeferred to have 0 or 1 items
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bent.mozilla, Assigned: bent.mozilla)
References
Details
Attachments
(1 file)
1.37 KB,
patch
|
jimm
:
review+
cjones
:
review+
|
Details | Diff | Splinter Review |
After the nested event loop work landed we can now have more than one deferred message. We need to handle that.
Attachment #427483 -
Flags: review?(jones.chris.g)
Attachment #427483 -
Flags: review?(jmathies)
![]() |
||
Updated•13 years ago
|
Attachment #427483 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 1•13 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/e4149d40e166
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment on attachment 427483 [details] [diff] [review] Patch, v1 Looks OK. No fault of this patch, but this multi-deferring looks like it will affect message ordering in not-entirely-known ways. When I fix RPC race resolution, this might need some re-fiddling.
Attachment #427483 -
Flags: review?(jones.chris.g) → review+
Updated•10 months ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•