Bug 546797 - '[OOPP] Assertion in RPCChannel's EnqueuePendingMessages: ABORT: expected mDeferred to have 0 or 1 items' r=jimm